<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".About" ><TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/aboutTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/translucent_red"
        android:textSize="@dimen/nameSize" />

    <View
        android:id="@+id/View01"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/view1"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="15dp"
        android:background="@color/translucent_red" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creatorName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/Licenses"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/translucent_red"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="21dp"
        android:text="@string/creator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView1"
                android:layout_marginTop="15dp"
        
        android:layout_centerHorizontal="true"
        android:background="@color/translucent_red" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/version" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/View01"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/slidingLicense"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:text="@string/slidingLicense2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/TextView01"
        android:text="@string/slidingLicense2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="28dp"
        android:text="@string/achertEngineLicense"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/creatorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/creator"
        android:layout_alignBottom="@+id/creator"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/creator"
        android:text="@string/creatorName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
