<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="5dp"
            android:text="@string/Date"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

   <LinearLayout
       android:id="@+id/linearLayout2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="20dp"
       android:layout_below="@+id/linearLayout1"
       android:layout_marginTop="14dp" >

       <TextView
           android:id="@+id/Name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/workoutName"
           android:textAppearance="?android:attr/textAppearanceMedium" />

       <AutoCompleteTextView
           android:id="@+id/workoutName"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="5dp"
           android:layout_weight="0.56"
           android:ems="10"
           android:inputType="text">
		</AutoCompleteTextView>
       
   </LinearLayout>

   <LinearLayout
       android:id="@+id/linearLayout3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="20dp"    
       android:layout_marginRight="20dp" 
       android:layout_below="@+id/linearLayout4"
       android:layout_marginTop="20dp" >

       <TextView
           android:id="@+id/Sets"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginRight="5dp"
           android:text="@string/SetNumber"
           android:textAppearance="?android:attr/textAppearanceMedium" />

       <EditText
           android:id="@+id/editText1"
           android:layout_width="60dp"
           android:layout_height="wrap_content"
           android:layout_marginRight="5dp"
           android:layout_weight="0.56"
           android:inputType="number" />

       <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginRight="5dp"
           android:text="@string/Reps"
           android:textAppearance="?android:attr/textAppearanceMedium" />

       <EditText
           android:id="@+id/editText2"
           android:layout_width="60dp"
           android:layout_height="wrap_content"
           android:layout_marginRight="5dp"
           android:layout_weight="1"
           android:inputType="numberDecimal"
           android:text="@string/weight" />

       <TextView
           android:id="@+id/textView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/unitOfWeight"
           android:textAppearance="?android:attr/textAppearanceMedium" />
       
       <Button
           android:id="@+id/addSetButton"
           style="?android:attr/buttonStyleSmall"
           android:layout_width="53dp"
           android:layout_height="wrap_content"
           android:layout_marginLeft="20dp"
           android:text="@string/addSet" />
       
   </LinearLayout>

   <LinearLayout
       android:id="@+id/linearLayout6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_marginLeft="20dp"
       android:layout_below="@+id/linearLayout2"
       android:layout_marginTop="20dp" >

       <TextView
           android:id="@+id/muscleGroup"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/muscleGroup"
           android:textAppearance="?android:attr/textAppearanceMedium" />

       <Spinner
           android:id="@+id/spinner1"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_marginLeft="20dp"
           android:layout_weight="1" />

   </LinearLayout>

   <LinearLayout
       android:id="@+id/linearLayout4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="20dp"
       android:layout_below="@+id/linearLayout6"
       android:layout_marginTop="20dp"
       android:orientation="vertical" >
       
   </LinearLayout>

   <LinearLayout
       android:id="@+id/linearLayout5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignRight="@+id/linearLayout3"
       android:layout_below="@+id/linearLayout3"
       android:layout_marginTop="30dp" >

       <Button
           android:id="@+id/saveWorkout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="60dp"
           android:text="@string/saveWorkout" />
       
   </LinearLayout>

</RelativeLayout>

</ScrollView>