<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listViewLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

   <TextView
       android:id="@+id/separator"
       style="?android:attr/listSeparatorTextViewStyle"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/Date"
       android:textColor="@android:color/black" 
       android:background="#808080"/>

    <TextView
        android:id="@+id/row_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:singleLine="true"
        android:text="@string/workoutName"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold" 
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/dateOfExcercise"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="false"
        android:text="@string/testView"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="16sp"
        android:textStyle="normal"
        android:maxLines="10" />
   
</LinearLayout>