<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"   
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/LinearLayout03"
        android:layout_marginBottom="166dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/createdLogsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@null"
            android:src="@drawable/chart_150" />
        
        

        <ImageButton
            android:id="@+id/aboutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="80dp"
            android:background="@null"
            android:src="@drawable/info_150" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout02"
        android:layout_marginBottom="75dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/newLogsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@null"
            android:src="@drawable/new_list2" />

        <ImageButton
            android:id="@+id/progressButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:background="@null"
            android:src="@drawable/list" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout02"
        android:layout_alignLeft="@+id/LinearLayout03"
        android:layout_marginBottom="59dp"
        android:layout_marginLeft="70dp"
        android:text="@string/newText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignRight="@+id/LinearLayout03"
        android:layout_marginRight="60dp"
        android:text="@string/histoyText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/LinearLayout02"
        android:layout_marginLeft="60dp"
        android:text="@string/progressText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/LinearLayout02"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/about" />

</RelativeLayout>